--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,3 +14,17 @@ $fa-font-path: "../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
+
+.router-link-exact-active{
+    background-color: rgba(54, 2, 241, 0.9);
+    color : #fff !important;
+}
+
+.level-two> .nav-item.menu-open > .nav-link{
+    background-color: rgba(255, 255, 255, 0.1);
+    color : #fff !important;
+}
+
+.level-two, .level-three{
+    margin-left: 10px;
+}
